--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -22,10 +22,17 @@ body {
   font-size: 2.4rem;
   /* 1.5 means 1.5 times the font size */
   line-height: 1.5;
+  overflow: hidden;
 }
 
 .app {
   @include centerFlex(column);
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 //////////////////////////////////////////////
